<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/Main"
    android:orientation="vertical"
    android:gravity="center_horizontal">


    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/bingoimage">


        <ImageView
            android:id="@+id/image"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/baxter"
            android:contentDescription="@string/todo" />

    </FrameLayout>

    <GridLayout
        android:layout_width="306dp"
        android:layout_height="252dp"

        android:layout_marginTop="80dp"
        android:columnCount="4"
        android:rowCount="4">

        <Button
            android:id="@+id/right"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:layout_row="1"
            android:layout_column="2"
            android:text="@string/right" />

        <Button
            android:id="@+id/left"
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/left" />

        <Button
            android:id="@+id/down"
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:layout_row="2"
            android:layout_column="1"
            android:text="@string/down" />

        <Button
            android:id="@+id/up"
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/up" />

        <Button
            android:id="@+id/up_left"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_row="0"
            android:layout_column="0"
            android:text="upl " />

        <Button
            android:id="@+id/up_right"
            android:layout_width="wrap_content"
            android:layout_height="62dp"
            android:layout_row="0"
            android:layout_column="2"
            android:text="@string/upr" />

        <Button
            android:id="@+id/down_right"
            android:layout_width="wrap_content"
            android:layout_height="62dp"
            android:layout_row="2"
            android:layout_column="2"
            android:text="@string/downr" />

        <Button
            android:id="@+id/down_left"
            android:layout_width="wrap_content"
            android:layout_height="62dp"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/downl" />

    </GridLayout>


</LinearLayout>


